Transformation des données

--- a/App/index.html
+++ b/App/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="assets/img/favicon.ico" />
     <title>NEMATERIA || Valorisation de collections numérisées</title>
+    <script src="js/init.js" type="module"></script>
 </head>
 
 <body>
@@ -19,8 +20,18 @@
         </nav>
     </aside>
     <main>
+        <section class="noticesCollection">
+            <header>
+                <h2>Collections</h2>
+            </header>
+            <section>
+                <article></article>
+            </section>
+        </section>
+        <section class="collection">
+
+        </section>
     </main>
-    <script src="js/init.js" type="module"></script>
 </body>
 
 </html>
