--- a/App/index.html
+++ b/App/index.html
@@ -15,21 +15,21 @@
 <body>
     <aside>
         <a href="/" title="retourner à l'accueil"><img class="logo" src="assets/img/Logo_Nemateria_2021_cube.png" alt="logo Nemateria"></a>
-        <h1></h1>
+        <h1>Collections</h1>
         <nav>
         </nav>
     </aside>
     <main>
-        <section class="noticesCollection">
+        <section class="notices">
             <header>
-                <h2>Collections</h2>
+                <h2>Notices de la collection</h2>
             </header>
             <section>
-                <article></article>
             </section>
         </section>
         <section class="collection">
-
+            <h2>Détails sur la collection</h2>
+            <section></section>
         </section>
     </main>
 </body>
