Filtre actif et affichage modifié

--- a/App/index.html
+++ b/App/index.html
@@ -15,23 +15,30 @@
 <body>
     <aside>
         <a href="/" title="retourner à l'accueil"><img class="logo" src="assets/img/Logo_Nemateria_2021_cube.png" alt="logo Nemateria"></a>
+        <input name="look" placeholder="Filtrer les notices" class="invisible" id="look">
         <nav>
-            <h1>Collections <i><img src="assets/img/icones/loupe.svg" class="icone"></i></h1>
-        </nav>
-        <section class="collection">
-            <header>
-                <h1>Détails sur la collection</h1>
+            <i><img src="assets/img/icones/loupe.svg" class="icone" id="cherche"></i>
+            <header class="jaune">
+                <h1>Collections </h1>
             </header>
-            <section></section>
+        </nav>
+        <section>
+            <section class="series"></section>
+            <section class="collection">
+                <header class="jaune">
+                    <h1>Détails sur la collection</h1>
+                </header>
+                <section></section>
+            </section>
         </section>
     </aside>
     <main>
-
         <section class="notices">
             <header>
                 <h1>Notices de la collection</h1>
             </header>
             <section>
+                <em>sélectionnez une collection sur la gauche</em>
             </section>
         </section>
         <section class="notice">
