Mise à jour de l'affichage des métadonnée

--- a/App/index.html
+++ b/App/index.html
@@ -42,9 +42,13 @@
             </section>
         </section>
         <section class="notice">
-            <header>
-                <i><img src="assets/img/icones/croix.svg" title="Fermer la fenêtre" alt="Icône fermer la fenêtre" class="icone" onclick="(function(e){console.log(e); e.target.classList.toggle('vu')})()"></i>
-            </header>
+            <i><img src="assets/img/icones/croixb.svg" title="Fermer la fenêtre" alt="Icône fermer la fenêtre" class="icone"></i>
+            <section id="media">
+
+            </section>
+            <section id="donnees">
+
+            </section>
         </section>
     </main>
 </body>
