Traitement plus subtile sur les vidéos

--- a/App/index.html
+++ b/App/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Economica:wght@400;700&family=ZCOOL+XiaoWei&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="assets/img/favicon.ico" />
+    <!-- <base href="/app/"> -->
     <title>NEMATERIA || Valorisation de collections numérisées</title>
     <script src="js/init.js" type="module"></script>
 </head>
@@ -44,10 +45,8 @@
         <section class="notice">
             <i><img src="assets/img/icones/croixb.svg" title="Fermer la fenêtre" alt="Icône fermer la fenêtre" class="icone"></i>
             <section id="media">
-
             </section>
             <section id="donnees">
-
             </section>
         </section>
     </main>
