Amélioration du responsive sur les outils

--- a/App/index.html
+++ b/App/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
     <aside>
         <a href="/" title="retourner à l'accueil"><img class="logo" src="assets/img/Logo_Nemateria_2021_cube.png" alt="logo Nemateria"></a>
         <input name="look" placeholder="Filtrer les notices" class="invisible" id="look">
@@ -34,6 +35,14 @@
         </section>
     </aside>
     <main>
+        <header>
+            <div class="burger" onclick="burger(this)">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+            <a href="/" title="retourner à l'accueil"><img src="assets/img/Logo_Nemateria_2021_cube.png" alt="logo Nemateria"></a>
+        </header>
         <section class="notices">
             <header>
                 <h1>Notices de la collection</h1>
