Travail cosmétique pour répondre aux commentaires

--- a/App/index.html
+++ b/App/index.html
@@ -53,8 +53,10 @@
         </section>
         <section class="notice">
             <i><img src="assets/img/icones/croixb.svg" title="Fermer la fenêtre" alt="Icône fermer la fenêtre" class="icone"></i>
+            <span class="fleche gauche"><img src="assets/img/icones/chevron_gauche.svg"></span>
             <section id="media">
             </section>
+            <span class="fleche droite"><img src="assets/img/icones/chevron_droit.svg"></span>
             <section id="donnees">
             </section>
         </section>
