--- a/App/index.html
+++ b/App/index.html
@@ -16,8 +16,10 @@
 <body>
 
     <aside>
-        <a href="/" title="retourner à l'accueil"><img class="logo" src="assets/img/Logo_Nemateria_2021_cube.png" alt="logo Nemateria"></a>
-        <input name="look" placeholder="Filtrer les notices" class="invisible" id="look">
+        <header>
+            <a href="/" title="retourner à l'accueil"><img class="logo" src="assets/img/Logo_Nemateria_2021_cube.png" alt="logo Nemateria"></a>
+            <input name="look" placeholder="Filtrer les notices" class="invisible" id="look">
+        </header>
         <nav>
             <i><img src="assets/img/icones/loupe.svg" class="icone" id="cherche"></i>
             <header class="jaune">
@@ -32,6 +34,11 @@
                 </header>
                 <section></section>
             </section>
+            <article>
+                <a href="https://www.nouvelle-aquitaine.fr/" target="_blank" class="na" title="Cliquer pour aller sur le site de la région">
+                <p>Avec la participation financière de la région Nouvelle Aquitaine</p>
+                <img src="assets/img/logo-naq.png" alt="Logo de la région Nouvelle Aquitaine" title="Avec la participation financière de la région Nouvelle Aquitaine"></a>
+            </article>
         </section>
     </aside>
     <main>
